Fix issues with window resizing and overflow
This commit adds a bit of space above the menu bar drag region so that it is easier to resize the window from the top.

It also ensures that scrollbars do not appear over the window controls.

--- a/src/components/windows/WindowsControls.module.css
+++ b/src/components/windows/WindowsControls.module.css
@@ -1,5 +1,6 @@
 .windowsControls {
   display: flex;
+  height: 100%;
 }
 
 .windowsControl {
