--- a/src/components/windows/WindowsMenuBar.module.css
+++ b/src/components/windows/WindowsMenuBar.module.css
@@ -1,6 +1,8 @@
 .menuBar {
   display: flex;
   height: 2em;
+  flex-shrink: 0;
+  align-items: flex-end;
   background-color: rgb(238, 238, 238);
 }
 
@@ -12,4 +14,6 @@
 
 .dragRegion {
   width: 100%;
+  height: 90%;
+  bottom: 0;
 }
