--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,12 @@ body {
   margin: 0;
 }
 
+.app {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
 .container {
   margin: 0;
   padding-top: 10vh;
@@ -25,6 +31,8 @@ body {
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  overflow-y: auto;
+  flex-grow: 1;
 }
 
 .logo {
